--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/aws-lambda": "^8.10.146",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "@types/sharp": "^0.31.1",
     "aws-cdk": "2.171.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -24,6 +25,7 @@
   "dependencies": {
     "aws-cdk-lib": "2.171.1",
     "aws-lambda": "^1.0.7",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "sharp": "^0.33.5"
   }
 }
